--- a/pages/component/shopList/search.wxml
+++ b/pages/component/shopList/search.wxml
@@ -2,10 +2,10 @@
 <view class="list">
   <view class="searchLeft">
       <view class="cuIcon-search lg text-gray searchIcon"></view>
-      <input placeholder="请输入配送店名称（可搜索小区名称)" style="flex:1;font-size:24rpx;height:100%"></input>
+      <input placeholder="请输入配送店名称（可搜索小区名称)" style="flex:1;font-size:24rpx;height:100%" bindinput="txt_search"></input>
   </view>
   <view class="searchRight">
-    <view class="rightBtn">列表</view>
+    <view class="rightBtn" bindtap="btn_list">列表</view>
     <view>地图</view>
   </view>
 </view>
