--- a/pages/shopDetail/shopDetail.wxml
+++ b/pages/shopDetail/shopDetail.wxml
@@ -14,11 +14,15 @@
   <view class="center">
     <view>门店照片</view>
     <view class='img'>
+      <image class='sh_img' src='https://beer.8v8a.com/Public/cssjsimages/images/shop/{{shop.sh_img}}'></image>
     </view>
   </view>
   <view class="footer">
     <view>门店地图</view>
-    <view class='img'></view>
+    <view class='img'>
+      <map id="myMap" class="map_shop" longitude="{{shop.sh_x}}" latitude="{{shop.sh_y}}" scale="14" markers="{{markers}}" bindmarkertap="markersAction">
+      </map>
+    </view>
   </view>
-    <view class="btn">确认门店</view>      
+    <view class="btn">确认门店</view>   
 </view>
