--- a/pages/shopDetail/shopDetail.wxss
+++ b/pages/shopDetail/shopDetail.wxss
@@ -47,3 +47,13 @@
   font-size: 35rpx;
   color:#fff;
 }
+
+.sh_img{
+  width:100%;
+  height:100%;
+}
+
+.map_shop{
+  width:100%;
+  height:100%;
+}
