--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -87,25 +87,68 @@
 	border-radius:12rpx;
 	left:5%;
 }
-.btn_phone{  
-	position: fixed;
-	bottom: 4.5rem;
-	min-width: 90%;
-  height: 98rpx;
-  line-height: 18rpx;
-  width: 635rpx;
-  line-height: 98rpx;
-  padding-top: 5rpx;
-	z-index:1;
-	background: linear-gradient(to bottom right, #4183fb , #575ceb);
-	color:#fff;
-	font-size: 35rpx;
-	border-radius:12rpx;
-	left:5%;
-}
+
 .swiper-item-images{
   width: 96%;
 	height: 300rpx;
 	margin-left:2%;
 	border-radius:0.6rem;
+}
+
+/* 手机号授权 */
+.float {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  top: 0;
+  left: 0;
+}
+.floatContent {
+  /* padding: 20rpx 0;   */
+  width: 80%;
+  background: #fff;
+  margin: 40% auto;
+  border-radius: 20rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: relative;
+  height: 255rpx;
+}
+.floatContent text {
+  color: #000;
+  font-size: 40rpx;
+  display: block;
+  margin: 0 auto;
+  position: absolute;
+  top: 50rpx;
+  /* text-align: center;   */
+  /* line-height: 60rpx;   */
+  border-radius: 30rpx;
+}
+.floatText{
+  width: 100%;
+  height: 100rpx;
+  display: flex;
+  justify-content: flex-start;
+  position: absolute;
+  bottom: 0;
+}
+.btn-cancle{
+  line-height: 100rpx;
+  flex: 1;
+  margin: 0;
+  padding: 0;
+  border-radius: none;
+}
+
+.show_view {
+  display: inline;
+}
+
+.hide_view {
+  display: none;
 }
