--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -33,6 +33,13 @@
   font-size:12px;
   color: black;
 }
+
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 0rpx;
+  border-radius: 50%;
+}
 .VIP{
   margin-left: 14rpx;
   margin-top: 6rpx;
