--- a/pages/myDetail/myDetail.wxml
+++ b/pages/myDetail/myDetail.wxml
@@ -3,19 +3,19 @@
   <view class="list">
     <view class="listLeft">头像</view>
     <view class="listRight">
-      <view class="imgName"></view>
+        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
     </view>
   </view>
   <view class="list" style="border-top:0px;">
     <view class="listLeft">昵称</view>
     <view class="listRight">
-      WANG MR
+      {{userInfo.nickName}}
     </view>
   </view>
   <view class="list" style="border-top:0px;">
     <view class="listLeft">手机号</view>
     <view class="listRight" style="flex:1;margin-right:0rpx;">
-       <text>185****2164</text>
+       <text>{{user.user_tel}}</text>
     </view>
     <view style="width:85rpx;margin-right: 50rpx;">
       <view class="update">修改</view>
