--- a/pages/myDetail/myDetail.wxss
+++ b/pages/myDetail/myDetail.wxss
@@ -26,15 +26,21 @@
   text-align: right;
 }
 .update{
-margin-left: 14rpx;
-margin-top: 55rpx;
-height: 30rpx;
-font-size: 20rpx;
-line-height: 30rpx;
-width: 74rpx;
-background: #575cee;
-color: #fff;
-text-align: center;
-border-radius: 10rpx;
+  margin-left: 14rpx;
+  margin-top: 55rpx;
+  height: 30rpx;
+  font-size: 20rpx;
+  line-height: 30rpx;
+  width: 74rpx;
+  background: #575cee;
+  color: #fff;
+  text-align: center;
+  border-radius: 10rpx;
+}
 
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 0rpx;
+  border-radius: 50%;
 }
